Remove stripping of nonprintable characters in the scanner. This causes problems with things like embedded comments and lyrics that have newlines or tabs. Keep the check for qchars that lack categorization.

BUG: 223502